<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Baseball Stat Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_button">Add</string>
    <string name="delete_button">Delete</string>
    <string name="team_list_title">Select A Team</string>
    <string name="title_activity_select_player">SelectPlayerActivity</string>
    <string name="default_team_name">Team</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="default_player_title">Player</string>
    <string name="default_number">###</string>
    <string name="default_position">Pos</string>
    <string name="default_throws_bats">R/R</string>
    <string name="update">Update</string>
    <string name="default_col_1">Col1</string>
    <string name="default_col_2">Col2</string>
    <string name="default_col_3">Col3</string>
    <string name="default_col_4">Col4</string>
    <string name="default_col_5">Col5</string>
    <string name="default_col_6">Col6</string>
    <string name="default_stat_1">1</string>
    <string name="default_stat_2">2</string>
    <string name="default_stat_3">3</string>
    <string name="default_stat_4">4</string>
    <string name="default_stat_5">5</string>
    <string name="default_stat_6">6</string>
    <string name="empty_team_toast">You must enter a player name</string>
    <string name="no_team_toast">No Team Added</string>
    
    <string name="default_0">0</string>
    
    <string name="title_activity_add_player">AddPlayerActivity</string>
    <string name="add_player">Enter Player Details</string>
    <string name="name_hint">Name</string>
    <string name="number_hint">Number</string>
    <string name="position_hint">Position</string>
    <string name="test_team">Team </string>
    <string name="test_player">Player </string>
    <string name="done_button">Done</string>
    <string name="save_button">Save</string>
    <string name="pitcher_test">Pitcher</string>
    
    <string name="add_team">Add a team!</string>
    <string name="add_select_player">Add a player!</string>
    <string name="add_team_dialog_hint">Team Name</string>
    
    <string-array name="position_array">
        <item>Pitcher</item>
        <item>Catcher</item>
        <item>1st Base</item>
        <item>2nd Base</item>
        <item>3rd Base</item>
        <item>Shortstop</item>
        <item>Left Field</item>
        <item>Center Field</item>
        <item>Right Field</item>
    </string-array>
    
    <string-array name="direction_array">
        <item>Right</item>
        <item>Left</item>
    </string-array>
    
    <string name="player_select_name">Name</string>
    <string name="player_select_position">Position</string>
    <string name="player_select_number">Number</string>
    <string name="player_select_throw">Throwing</string>
    <string name="player_select_hit">Hitting</string>
    
    <string name="player_position">Position: </string>
    <string name="player_number">Number: </string>
    <string name="player_throw">Throwing side: </string>
    <string name="player_hit">Hitting side: </string>
    
    <string name="pitcher_ip">IP</string>
    <string name="pitcher_w">W</string>
    <string name="pitcher_l">L</string>
    <string name="pitcher_era">ERA</string>
    <string name="pitcher_so">SO</string>
    <string name="pitcher_whip">WHIP</string>
    
    <string name="fielder_ab">AB</string>
    <string name="fielder_r">R</string>
    <string name="fielder_h">H</string>
    <string name="fielder_hr">HR</string>
    <string name="fielder_rbi">RBI</string>
    <string name="fielder_avg">AVG</string>
    <string name="menu_delete">Delete</string>

</resources>