<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:text="@string/add_player"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:hint="@string/name_hint" >
        </EditText>        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" >

        <EditText
            android:id="@+id/position_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position_hint"
            android:layout_weight=".5" >

        </EditText>
        
        <EditText
            android:id="@+id/number_edit_text"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_weight=".5"
            android:hint="@string/number_hint"
            android:layout_height="wrap_content" >
        </EditText>
        
      
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/stats_update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:text="@string/update" />
    </RelativeLayout>

</LinearLayout>